added more context in the file

--- a/index.html
+++ b/index.html
@@ -11,16 +11,44 @@
     <div id="first_div">
       <!-- <h1>First Section</h1> -->
       <p>Name: <b>Princess Kemi Olusegun</b></p>
-      <h2>My love for technology:</h2>
+      <p><b>My love for technology:</b></p>
+      <p class="writeups">
+        I love technology because it <em> changes the world</em> by making it a
+        more civilised place to live. And it makes self-education easier, one
+        can learn anything from anywhere. It makes people to have more chances
+        to be happy and/or successful. It's ever-changing.
+        <b>There's never a dull moment!</b>
+      </p>
     </div>
+
     <div id="second_div">
       <!-- <h1>Second section</h1> -->
-      <h2>What I have learnt so far:</h2>
-      <h2>The importance of CSS:</h2>
+      <p><b>What I have learnt so far:</b></p>
+      <p class="writeups">
+        I have been able to learn about the structure of a website, and its
+        appearance/styling. I also learnt that there are three ways to write css
+        in a document.
+      </p>
+      <p><b>The importance of CSS:</b></p>
+      <p class="writeups">
+        The importance of CSS cannot be <b><i>over-emphasized</i></b> because
+        without it most sites we see today won't look very pleasing to the eyes.
+        CSS is what beautifies the structure of a website, and it also brings
+        about great user experience.
+      </p>
     </div>
     <div id="third_div">
       <!-- <h1>Third section</h1> -->
-      <h2>The difference between paddings, margins, and borders</h2>
+      <p><b>The difference between paddings, margins, and borders:</b></p>
+      <p class="writeups">
+        A content is bounded by padding which is again bounded by the border.
+        The border is again bounded by the margin. <b></b> <b>Border</b> is the
+        strip that goes around your div/element of the content.
+        <b>Padding</b> is the space between the content and the border.
+        <b>Margin</b> is the space outside the border of an element. If you need
+        to add some space around an image or a text area, you can add a margin
+        to the relevant item.<br />
+      </p>
     </div>
   </body>
 </html>
