added some texts

--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
       <p><b>What I have learnt so far:</b></p>
       <p class="writeups">
         I have been able to learn about the structure of a website, and its
-        appearance/styling. I also learnt that there are three ways to write css
-        in a document.
+        appearance/styling. I also learnt that there are three ways to write CSS
+        in a document. And also the cascading hierarchy and various properties
+        of CSS. I have also been able to learn about git as a version control
+        system, and also how to use it to manage my codes.
       </p>
       <p><b>The importance of CSS:</b></p>
       <p class="writeups">
@@ -42,12 +44,12 @@
       <p><b>The difference between paddings, margins, and borders:</b></p>
       <p class="writeups">
         A content is bounded by padding which is again bounded by the border.
-        The border is again bounded by the margin. <b></b> <b>Border</b> is the
-        strip that goes around your div/element of the content.
-        <b>Padding</b> is the space between the content and the border.
-        <b>Margin</b> is the space outside the border of an element. If you need
-        to add some space around an image or a text area, you can add a margin
-        to the relevant item.<br />
+        The border is again bounded by the margin. <br />
+        <b><i>Border</i></b> is the strip that goes around your div/element of
+        the content. <b><i>Padding</i></b> is the space between the content and
+        the border. <b><i>Margin</i></b> is the space outside the border of an
+        element. If you need to add some space around an image or a text area,
+        you can add a margin to the relevant item.<br />
       </p>
     </div>
   </body>
